routing is set up, it works I just need to set up a nav

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
+body{
+    font-family: 'Xanh Mono', monospace;
+    color: white;
+    background-color: #0d1117;
+}
