playing around with nav collapse.. It's a bit more difficult than I remembered.

--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -1,1 +1,40 @@
-<p>nav works!</p>
+<div class="d-none d-md-block">
+    <ul class="nav fixed-top justify-content-around bg">
+        <li class="nav-item">
+            <a class="nav-link" routerLink=''>Home</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" routerLink='/about'>About</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link no" routerLink=''>Christy's Portfolio</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" routerLink='/projects'>Projects</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" routerLink='/contact'>Contact</a>
+        </li>
+    </ul>
+</div>
+
+<div class="d-md-none">
+    <ul class="nav fixed-top justify-content-around bg">
+        <li class="nav-item">
+            <a class="nav-link no" routerLink=''>Christy's Portfolio</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" routerLink=''>Home</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" routerLink='/about'>About</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" routerLink='/projects'>Projects</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" routerLink='/contact'>Contact</a>
+        </li>
+    </ul>
+    
+</div>
