--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,7 +1,16 @@
-<div class="container">
+<app-hero-img></app-hero-img>
+
+<!-- <div class="container">
     <div class="row">
-        <div class="col-12 d-flex justify-content-center">
-            <h1>Welcome To Christy's Portfolio!</h1>
+        <div class="col-12 center">
+            <img src="../../../assets/images/christy700.jpg" height="400px" alt="Image Of Christy Eang.">
         </div>
+        <div class="col-12 center">
+            <div class="col-lg-5">
+
+                <p>Christy Eang: Stockton, California.
+                    I am a Codestack Academy student, with a passion for learning. I'm experienced in Angular, Ionic, ReactJS, C#, JavaScript, Typescript, HTML, and CSS. I'd love to work with you!</p>
+                </div>
+            </div>
     </div>
-</div>
+</div> -->
