contact page done!

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,1 +1,19 @@
-<p>footer works!</p>
+<div class="container-fluid bee">
+    <div class="row">
+        <div class="col-6 mb-3">
+            <p>Contact Me:</p>
+            <a class="white" href="mailto:Christy@Eang.dev">Christy@Eang.dev</a>
+        </div>
+        <div class="col-6 d-flex justify-content-end pt-4">
+            <a target="_blank" href='https://github.com/christycreme95' class="mx-3">
+                <i class="icons fab fa-github-alt fa-2x"></i>
+            </a>
+            <a target="_blank" href='https://www.instagram.com/christycreme95/'>
+                <i class="icons fab fa-instagram fa-2x"></i>
+            </a>
+            <a target="_blank" href='https://www.facebook.com/christycreme95' class="ml-3">
+                <i class="icons fab fa-facebook fa-2x"></i>
+            </a>
+        </div>
+    </div>
+</div>
