--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -1,3 +1,4 @@
+<!-- The Normal Nav on big screen -->
 <div class="d-none d-md-block">
     <ul class="nav fixed-top justify-content-around bg">
         <li class="nav-item">
@@ -17,24 +18,30 @@
         </li>
     </ul>
 </div>
+<!-- The Collapse Nav for Smol -->
+  <nav class="navbar navbar-expand-md navbar-dark bg d-md-none">
+    <a class="nav-link no" routerLink=''>Christy's Portfolio</a>
 
-<div class="d-md-none">
-    <ul class="nav fixed-top justify-content-around bg">
+    <button class="navbar-toggler navbar-toggler-right" type="button" (click)="collapse()" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div [ngbCollapse]="isNavCollapsed" class="navbar-collapse" id="navbarSupportedContent">
+
+      <ul class="navbar-nav">
         <li class="nav-item">
-            <a class="nav-link no" routerLink=''>Christy's Portfolio</a>
+          <a class="nav-link text-right active" routerLink=''>Home</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" routerLink=''>Home</a>
+          <a class="nav-link text-right active" routerLink='/about'>About</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" routerLink='/about'>About</a>
-        </li>
+            <a class="nav-link text-right active" routerLink='/projects'>Projects</a>
+          </li>
         <li class="nav-item">
-            <a class="nav-link" routerLink='/projects'>Projects</a>
+          <a class="nav-link text-right active" routerLink='/contact'>Contact</a>
         </li>
-        <li class="nav-item">
-            <a class="nav-link" routerLink='/contact'>Contact</a>
-        </li>
-    </ul>
-    
-</div>
+      </ul>
+      
+    </div>
+
+  </nav>
