--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -2,13 +2,13 @@
 <div class="d-none d-md-block">
     <ul class="nav fixed-top justify-content-around bg">
         <li class="nav-item">
-            <a class="nav-link" routerLink=''>Home</a>
+            <a class="nav-link" routerLink='/home'>Home</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" routerLink='/about'>About</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link no" routerLink=''>Christy's Portfolio</a>
+            <a class="nav-link no" routerLink='/home'>Christy's Portfolio</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" routerLink='/projects'>Projects</a>
@@ -29,7 +29,7 @@
 
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link text-right active" routerLink=''>Home</a>
+          <a class="nav-link text-right active" routerLink='/home'>Home</a>
         </li>
         <li class="nav-item">
           <a class="nav-link text-right active" routerLink='/about'>About</a>
