--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -5,6 +5,9 @@
             <a class="white" href="mailto:Christy@Eang.dev">Christy@Eang.dev</a>
         </div>
         <div class="col-6 d-flex justify-content-end pt-4">
+            <a href="">
+                
+            </a>
             <a target="_blank" href='https://github.com/christycreme95' class="mx-3">
                 <i class="icons fab fa-github-alt fa-2x"></i>
             </a>
