--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -18,7 +18,8 @@
         </li>
     </ul>
 </div>
-<!-- The Collapse Nav for Smol -->
+
+<!-- The Collapse Nav for smol-med -->
   <nav class="navbar navbar-expand-md navbar-dark bg d-md-none">
     <a class="nav-link no" routerLink=''>Christy's Portfolio</a>
 
