--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -1,1 +1,7 @@
-<h1 class="center">Under Construction</h1>
+<div class="container-fluid mt-5">
+    <div class="row">
+        <div class="col-12">
+            <h1 class="center">Under Construction</h1>
+        </div>
+    </div>
+</div>
