added some icons to about page

--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -4,4 +4,47 @@
             <h1 class="center">Under Construction</h1>
         </div>
     </div>
+
+    <div class="row">
+        <div class="col-3">
+            <h3 class="center mb-5">Experienced Skills</h3>
+            <div class="col-12 ar mb-5">
+                <i class="devicon-angularjs-plain colored x"></i>
+                <i class="devicon-ionic-original colored x"></i>
+                <i class="devicon-react-original colored x"></i>
+            </div>
+
+            <div class="col-12 ar mb-5">
+                <i class="devicon-javascript-plain colored x"></i>
+
+                <i class="devicon-typescript-plain colored x"></i>
+            </div>
+
+            <div class="col-12 ar mb-5">
+                <i class="devicon-html5-plain colored x"></i>
+                <i class="devicon-csharp-plain colored x"></i>
+                <i class="devicon-css3-plain colored x"></i>
+            </div>
+
+        </div>
+        <div class="col-6"></div>
+        <div class="col-3">
+            <h3 class="center mb-3">Development Tools:</h3>
+            <div class="col-12 ar mb-5">
+                <i class="fab fa-unity fa-3x"></i>
+                <img src="../../../assets/images/slackicon50.png" alt="slack icon">
+                <img src="../../../assets/images/filezillalogo.png" alt="filezilla logo">
+            </div>
+            <div class="col-12 ar mb-5">
+                <i class="devicon-visualstudio-plain colored x"></i>
+                <i class="devicon-bootstrap-plain colored x"></i>
+                <img src="../../../assets/images/adobexd70.png" height="50px" alt="adobe xd logo">
+            </div>
+            <div class="col-12 ar mb-5">
+                <img src="../../../assets/images/jiralogo.png" alt="jira logo">
+                <img src="../../../assets/images/postmanlogo.png" alt="postman logo">
+                <i class="icons fab fa-github-alt fa-3x"></i>
+            </div>
+        </div>
+    </div>
 </div>
