--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -5,46 +5,53 @@
         </div>
     </div>
 
+
+
+
+    <div class="border-top mb-4"></div>
+    <!-- Information About My Experience -->
     <div class="row">
-        <div class="col-3">
-            <h3 class="center mb-5">Experienced Skills</h3>
+        <div class="col-sm-6 col-lg-4">
+            <h3 class="center mb-5"><u>Experienced Skills:</u></h3>
             <div class="col-12 ar mb-5">
-                <i class="devicon-angularjs-plain colored x"></i>
-                <i class="devicon-ionic-original colored x"></i>
-                <i class="devicon-react-original colored x"></i>
+                    <i class="devicon-angularjs-plain colored x" placement="top" ngbTooltip="Angular"></i>
+                <i class="devicon-ionic-original colored x" placement="top" ngbTooltip="Ionic with Angular"></i>
+                <i class="devicon-react-original colored x" placement="top" ngbTooltip="React JS"></i>
             </div>
-
             <div class="col-12 ar mb-5">
-                <i class="devicon-javascript-plain colored x"></i>
-
-                <i class="devicon-typescript-plain colored x"></i>
+                <i class="devicon-typescript-plain colored x" placement="top" ngbTooltip="Typescript"></i>
+                <img src="../../../assets/images/sqllogowhitesmol.png" class="bgwhite" alt="sql logo" placement="top" ngbTooltip="SQL">
+                <i class="devicon-javascript-plain colored x" placement="top" ngbTooltip="Javascript"></i>
             </div>
-
             <div class="col-12 ar mb-5">
-                <i class="devicon-html5-plain colored x"></i>
-                <i class="devicon-csharp-plain colored x"></i>
-                <i class="devicon-css3-plain colored x"></i>
+                <i class="devicon-html5-plain colored x" placement="top" ngbTooltip="HTML"></i>
+                <i class="devicon-csharp-plain colored x" placement="top" ngbTooltip="C#"></i>
+                <i class="devicon-css3-plain colored x" placement="top" ngbTooltip="CSS"></i>
             </div>
-
         </div>
-        <div class="col-6"></div>
-        <div class="col-3">
-            <h3 class="center mb-3">Development Tools:</h3>
+
+        <div class="col-lg-4 d-none d-lg-block"></div>
+        
+        <div class="col-sm-6 col-lg-4">
+            <h3 class="center mb-5"><u>Development Tools:</u></h3>
             <div class="col-12 ar mb-5">
-                <i class="fab fa-unity fa-3x"></i>
-                <img src="../../../assets/images/slackicon50.png" alt="slack icon">
-                <img src="../../../assets/images/filezillalogo.png" alt="filezilla logo">
+                <i class="fab fa-unity fa-3x" placement="top" ngbTooltip="Unity"></i>
+                <img src="../../../assets/images/filezillalogo.png" alt="filezilla logo" placement="top" ngbTooltip="FileZilla">
+                <i class="icons fab fa-github-alt fa-3x" placement="top" ngbTooltip="Github"></i>
             </div>
+            
             <div class="col-12 ar mb-5">
-                <i class="devicon-visualstudio-plain colored x"></i>
-                <i class="devicon-bootstrap-plain colored x"></i>
-                <img src="../../../assets/images/adobexd70.png" height="50px" alt="adobe xd logo">
+                <i class="devicon-visualstudio-plain colored x" placement="top" ngbTooltip="Visual Studio Code"></i>
+                <i class="devicon-bootstrap-plain colored x" placement="top" ngbTooltip="Bootstrap"></i>
+                <img src="../../../assets/images/adobexd70.png" height="50px" alt="adobe xd logo" placement="top" ngbTooltip="Adobe XD">
             </div>
+
             <div class="col-12 ar mb-5">
-                <img src="../../../assets/images/jiralogo.png" alt="jira logo">
-                <img src="../../../assets/images/postmanlogo.png" alt="postman logo">
-                <i class="icons fab fa-github-alt fa-3x"></i>
+                <img src="../../../assets/images/jiralogo.png" alt="jira logo" placement="top" ngbTooltip="Jira">
+                <img src="../../../assets/images/slackicon50.png" alt="slack icon" placement="top" ngbTooltip="Slack">
+                <img src="../../../assets/images/postmanlogo.png" alt="postman logo" placement="top" ngbTooltip="Postman">
             </div>
+
         </div>
     </div>
 </div>
