--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -1,15 +1,24 @@
 <div class="container-fluid mt-5">
+<!-- Top h1 -->
     <div class="row">
         <div class="col-12">
-            <h1 class="center">Under Construction</h1>
+            <h1 class="center">About Christy</h1>
+        </div>
+        <div class="col-6">
+            
+        </div>
+    </div>
+    
+    <div class="row">
+        <div class="col-8"></div>
+        <div class="col-4 d-flex justify-content-end">
+            <img src="../../../assets/images/MyPic.png" height="400px" alt="Picture of Christy">
         </div>
     </div>
 
-
-
-
-    <div class="border-top mb-4"></div>
+    
     <!-- Information About My Experience -->
+    <div class="border-top mb-4"></div>
     <div class="row">
         <div class="col-sm-6 col-lg-4">
             <h3 class="center mb-5"><u>Experienced Skills:</u></h3>
@@ -43,7 +52,7 @@
             <div class="col-12 ar mb-5">
                 <i class="devicon-visualstudio-plain colored x" placement="top" ngbTooltip="Visual Studio Code"></i>
                 <i class="devicon-bootstrap-plain colored x" placement="top" ngbTooltip="Bootstrap"></i>
-                <img src="../../../assets/images/adobexd70.png" height="50px" alt="adobe xd logo" placement="top" ngbTooltip="Adobe XD">
+                <i class="devicon-xd-plain colored x" placement="top" ngbTooltip="Adobe XD"></i>
             </div>
 
             <div class="col-12 ar mb-5">
