--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid mt-5">
-    <div class="row py-4">
+    <div class="row pb-5 pt-4">
         <div class="col-12 text-center mt-2">
             <h1>Have Questions? Comments? Want To Hire Me?</h1>
             <h1>Contact Christy!</h1>
