--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -7,15 +7,17 @@
     </div>
     <div class="container">
         <div class="row">
-                <div class="col-md-7 col-12 order-2 order-md-1 mt-5">
-                    <h3>I am a Codestack Academy student, with a passion for learning. I'm experienced in Angular, Ionic, ReactJS, C#,
-                        JavaScript, Typescript, HTML, and CSS. I'd love to work with you!</h3>
-                    <div class= 'mt-3'>
-                        <a routerLink='/contact' class="btn btn-outline-light mb-4">Contact Me!</a>
-                    </div>
+            <div class="col-md-7 col-12 order-2 order-md-1 mt-5">
+                <h3>I am a Codestack Academy student, with a passion for learning. I'm experienced in Angular, Ionic,
+                    ReactJS, C#,
+                    JavaScript, Typescript, HTML, and CSS. I'd love to work with you!</h3>
+                <div class='mt-3'>
+                    <a routerLink='/contact' class="btn btn-outline-light mb-4">Contact Me!</a>
                 </div>
-                <div class="col-md-5 col-12 order-1 order-md-2 center">
-                    <img src="../../../assets/images/christypic.png" alt="A picture of Christy in a grey polo.">
-                </div>
+            </div>
+            <div class="col-md-5 col-12 order-1 order-md-2 center">
+                <img src="../../../assets/images/christypic.png" alt="A picture of Christy in a grey polo.">
+            </div>
         </div>
+    </div>
 </div>
