--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -1,3 +1,4 @@
+
 .white{
     color: white;
 }
@@ -13,6 +14,7 @@
 }
 .bee{
     border-top: 1px solid white;
+    position: relative;
 }
 .codewars{
     width: 30px;
@@ -22,4 +24,19 @@
 
 .codewars:hover{
     background-image: url(../../../assets/images/codewarsBlue.png);
+}
+.space{
+    font-size: 20px;
+    letter-spacing: 4px;
+}
+
+@media only screen and (max-width: 600px) {
+    .space{
+        font-size: 16px;
+    }
+}
+@media only screen and (max-width: 420px) {
+    .space{
+        font-size: 10px;
+    }
 }
