--- a/src/app/pages/contact/contact.component.css
+++ b/src/app/pages/contact/contact.component.css
@@ -13,18 +13,59 @@ a:hover{
     transform:scale(1.07,1.07);
     transition-duration: .4s;
 }
+.card{
+    width: 18rem;
+}
+.cardMar{
+    margin-bottom: 50px;
+}
 .email{
     background: linear-gradient(#3e0000 ,#000000);
+}
+.email:hover{
+    box-shadow: 0px 5px 30px #3e0000;
 }
 .insta{
     background: linear-gradient(#970088,#000000);
 }
+.insta:hover{
+    box-shadow: 0px 5px 30px #970088;
+}
 .fb{
     background: linear-gradient(#19345D, #000000)
+}
+.fb:hover{
+    box-shadow: 0px 5px 30px #19345D;
 }
 .github{
     background: linear-gradient(#008791, #000000)
 }
+.github:hover{
+    box-shadow: 0px 5px 30px #008791;
+}
 .down{
-    padding-bottom: 40px;
+    padding-bottom: 30px;
+}
+.marAdd{
+    margin-top: 20px;
+}
+.iconSizing{
+    font-size: 7em;
+}
+@media only screen and (max-width: 400px) {
+    .bigtxt{
+        font-size: 30px;
+    }
+    .iconSizing{
+        font-size: 4em;
+    }
+    .cardMar{
+        margin-bottom: 20px;
+    }
+}
+@media only screen and (min-width:768px){
+    .marAdd{
+        margin-top: 80px;
+        margin-bottom: 105px;
+    }
 }
