--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -1,14 +1,13 @@
-<div class="container-fluid mt-5">
-    <div class="row pb-5 pt-4">
-        <div class="col-12 text-center mt-2">
-            <h1>Have Questions? Comments? Want To Hire Me?</h1>
-            <h1>Contact Christy!</h1>
+<div class="container-fluid marAdd">
+    <div class="row">
+        <div class="col-12 text-center">
+            <h1 class="bigtxt">Have Questions? Comments? Need a Web Developer? <br/> Contact Christy!</h1>
         </div>
     </div>
     <div class="row my-5 down">
-        <div class="col-lg-3 col-md-6 center mb-5">
-            <a class="card email p-2" style="width: 18rem;" target="_blank" href="mailto:christy@eang.dev">
-                <i class="center far fa-paper-plane fa-7x"></i>
+        <div class="col-lg-3 col-sm-6 center cardMar">
+            <a class="card email p-2" target="_blank" href="mailto:christy@eang.dev">
+                <i class="center far fa-paper-plane iconSizing"></i>
                 <div class="card-body text-center">
                     <h3 class="card-title">Email Me!</h3>
                     <p class="card-text">christy@eang.dev</p>
@@ -16,27 +15,27 @@
             </a>
         </div>
 
-        <div class="col-lg-3 col-md-6 center mb-5">
-            <a class="card insta p-2" style="width: 18rem;"  target="_blank" href="http://www.instagram.com/christycreme95">
-                <i class="center fab fa-instagram fa-7x"></i>
+        <div class="col-lg-3 col-sm-6 center cardMar">
+            <a class="card insta p-2"  target="_blank" href="http://www.instagram.com/christycreme95">
+                <i class="center fab fa-instagram iconSizing"></i>
                 <div class="card-body text-center">
                     <h3 class="card-title">My Instagram!</h3>
                     <p class="card-text">@christycreme95</p>
                 </div>
             </a>
         </div>
-        <div class="col-lg-3 col-md-6 center mb-5">
-            <a class="card fb p-2" style="width: 18rem;" target="_blank" href='https://www.facebook.com/christycreme95'>
-                <i class="center fab fa-facebook fa-7x"></i>
+        <div class="col-lg-3 col-sm-6 center cardMar">
+            <a class="card fb p-2" target="_blank" href='https://www.facebook.com/christycreme95'>
+                <i class="center fab fa-facebook iconSizing"></i>
                 <div class="card-body text-center">
                     <h3 class="card-title">My Facebook!</h3>
                     <p class="card-text">christycreme95</p>
                 </div>
             </a>
         </div>
-        <div class="col-lg-3 col-md-6 center mb-5">
-            <a class="card github p-2" style="width: 18rem;" target="_blank" href='https://github.com/christycreme95'>
-                <i class="center fab fa-github-alt fa-7x"></i>
+        <div class="col-lg-3 col-sm-6 center cardMar">
+            <a class="card github p-2" target="_blank" href='https://github.com/christycreme95'>
+                <i class="center fab fa-github-alt iconSizing"></i>
                 <div class="card-body text-center">
                     <h3 class="card-title">My Github!</h3>
                     <p class="card-text">christycreme95</p>
