--- a/src/app/components/nav/nav.component.css
+++ b/src/app/components/nav/nav.component.css
@@ -1,6 +1,3 @@
-.no{
-    text-decoration: underline;
-}
 .no:hover{
     color: white !important;
 }
@@ -17,4 +14,7 @@
 }
 .white{
     color: white;
+}
+.fixedSize{
+    width: 10%;
 }
