--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -1,20 +1,20 @@
 <!-- The Normal Nav on big screen -->
 <div class="d-none d-md-block">
-    <ul class="nav fixed-top justify-content-around bg">
-        <li class="nav-item">
-            <a class="nav-link" routerLink='/home'>Home</a>
+    <ul class="nav fixed-top center justify-content-between bg">
+        <li class="nav-item fixedSize text-center">
+            <a class="nav-link" #home routerLink='/home'>Home</a>
         </li>
-        <li class="nav-item">
-            <a class="nav-link" routerLink='/about'>About</a>
+        <li class="nav-item fixedSize text-center">
+            <a class="nav-link" #nav routerLink='/about'>About</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item text-center">
             <a class="nav-link no" routerLink='/home'>Christy's Portfolio</a>
         </li>
-        <li class="nav-item">
-            <a class="nav-link" routerLink='/projects'>Projects</a>
+        <li class="nav-item fixedSize text-center">
+            <a class="nav-link" #projects routerLink='/projects'>Projects</a>
         </li>
-        <li class="nav-item">
-            <a class="nav-link" routerLink='/contact'>Contact</a>
+        <li class="nav-item fixedSize text-center">
+            <a class="nav-link" #contact routerLink='/contact'>Contact</a>
         </li>
     </ul>
 </div>
