--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -4,18 +4,18 @@
         <div class="col-12">
             <h1 class="center">About Christy</h1>
         </div>
-        <div class="col-6">
-            
-        </div>
+        <!-- <div class="col-6">
+        </div> -->
     </div>
     
     <div class="row">
-        <div class="col-8"></div>
-        <div class="col-4 d-flex justify-content-end">
-            <img src="../../../assets/images/MyPic.png" height="400px" alt="Picture of Christy">
+        <div class="col-6">
+            <h2>Under Construction</h2>
         </div>
+        <!-- <div class="col-6 mr-0 d-flex justify-content-end">
+            <img src="../../../assets/images/MyPic.png" height="400px" alt="Picture of Christy">
+        </div> -->
     </div>
-
     
     <!-- Information About My Experience -->
     <div class="border-top mb-4"></div>
