--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -8,7 +8,7 @@
             <a class="nav-link" #nav routerLink='/about'>About</a>
         </li>
         <li class="nav-item text-center">
-            <a class="nav-link no" routerLink='/home'>Christy's Portfolio</a>
+            <a class="nav-link no">Christy's Portfolio</a>
         </li>
         <li class="nav-item fixedSize text-center">
             <a class="nav-link" #projects routerLink='/projects'>Projects</a>
