--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -12,9 +12,9 @@
         <div class="col-6">
             <h2>Under Construction</h2>
         </div>
-        <!-- <div class="col-6 mr-0 d-flex justify-content-end">
+        <div class="col-6 mr-0 d-flex justify-content-end p-0">
             <img src="../../../assets/images/MyPic.png" height="400px" alt="Picture of Christy">
-        </div> -->
+        </div>
     </div>
     
     <!-- Information About My Experience -->
