playing with project page

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -29,6 +29,9 @@
                 <a target="_blank" href='https://github.com/christycreme95'>
                     <i class="icons fab fa-github-alt fa-2x"></i>
                 </a>
+                <a target="_blank" href='https://www.eang.dev/linkedin' class="ml-3">
+                    <i class="icons fab fa-linkedin-in fa-2x"></i>
+                </a>
                 <a target="_blank" href='https://www.instagram.com/christycreme95/' class="ml-3">
                     <i class="icons fab fa-instagram fa-2x"></i>
                 </a>
