--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -26,10 +26,10 @@
         </div>
         <div class="col-lg-3 col-sm-6 center cardMar">
             <a class="card fb p-2" target="_blank" href='https://www.facebook.com/christycreme95'>
-                <i class="center fab fa-facebook iconSizing"></i>
+                <i class="center fab fa-linkedin-in iconSizing"></i>
                 <div class="card-body text-center">
-                    <h3 class="card-title">My Facebook!</h3>
-                    <p class="card-text">christycreme95</p>
+                    <h3 class="card-title">My LinkedIn!</h3>
+                    <p class="card-text">christyeang</p>
                 </div>
             </a>
         </div>
