--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -9,10 +9,12 @@
     </div>
     
     <div class="row">
-        <div class="col-6">
-            <h2>Under Construction</h2>
+        <div class="col-lg-8">
+            <h2 class="mt-3 center">Under Construction</h2>
+            <p>Codestack:</p>
+
         </div>
-        <div class="col-6 mr-0 d-flex justify-content-end p-0">
+        <div class="col-lg-4 mr-0 d-flex justify-content-end p-0">
             <img src="../../../assets/images/MyPic.png" height="400px" alt="Picture of Christy">
         </div>
     </div>
