--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -1,16 +1,16 @@
 <div class="container-fluid mt-5">
-<!-- Top h1 -->
     <div class="row">
         <div class="col-12">
             <h1 class="center">About Christy</h1>
         </div>
-        <!-- <div class="col-6">
-        </div> -->
     </div>
     
     <div class="row">
-        <div class="col-6">
-            <h2>Under Construction</h2>
+        <div class="col-6 mt-4">
+            <h2 class="center">Christy's Experience:</h2>
+            <p></p>
+
+
         </div>
         <div class="col-6 mr-0 d-flex justify-content-end p-0">
             <img src="../../../assets/images/MyPic.png" height="400px" alt="Picture of Christy">
