--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -26,7 +26,10 @@
             <a class="white" href="mailto:Christy@eang.com">Christy Eang => Christy@Eang.Dev</a>
             </div>
             <div class="col-12 mt-2 center">
-                <a target="_blank" href='https://github.com/christycreme95'>
+                <a target="_blank" href='https://www.linkedin.com/in/christyeang'>
+                    <i class="icons fab fa-linkedin-in fa-2x"></i>
+                </a>
+                <a target="_blank" href='https://github.com/christycreme95' class="ml-3">
                     <i class="icons fab fa-github-alt fa-2x"></i>
                 </a>
                 <a target="_blank" href='https://www.instagram.com/christycreme95/' class="ml-3">
