about me finished

--- a/src/app/pages/projects/projects.component.html
+++ b/src/app/pages/projects/projects.component.html
@@ -2,15 +2,16 @@
 
 <div class="container">
     <div class="row">
-        <div class="col-lg-4 stretch" *ngFor="let proj of projects">
+        <div class="col-12 col-md-6 col-lg-4 stretch" *ngFor="let proj of projects">
             <div class="projBox p-3 my-3 rounded">
                 <a class="text-decoration-none text-light" target="_blank" href="{{proj.src}}">
                 <img src={{proj.picture}} class="img-fluid" alt="Christy's Project {{proj.name}}">
                 
                     <br>
-                    <h2 class="mt-2">{{proj.name}}</h2>
-                    <p class="pb-3">{{proj.description}}</p>
-                    <small style="position: absolute; bottom: 30px; color: rgb(0, 255, 255);">{{proj.keywords}}</small>
+
+                    <h2 class="mt-2"><u>{{proj.name}}</u></h2>
+                    <p class="pb-4">{{proj.description}}</p>
+                    <p style="color: rgb(0, 255, 255); position: absolute; bottom: 15px; font-size: 12px;" class="pr-4">{{proj.keywords}}</p>
                 </a>
                 
             </div>
