--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -1,5 +1,5 @@
 <!-- The Normal Nav on big screen -->
-<div class="d-none d-md-block">
+<div class="d-none d-lg-block">
     <ul class="nav fixed-top center justify-content-between bg">
         <li class="nav-item fixedSize text-center">
             <a class="nav-link" #home routerLink='/home'>Home</a>
@@ -20,7 +20,7 @@
 </div>
 
 <!-- The Collapse Nav for smol-med -->
-  <nav class="navbar navbar-expand-md navbar-dark bg d-md-none">
+  <nav class="navbar navbar-expand-lg navbar-dark bg d-lg-none">
     <a class="nav-link no" routerLink=''>Christy's Portfolio</a>
 
     <button class="navbar-toggler navbar-toggler-right" type="button" (click)="collapse()" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
