--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -9,12 +9,20 @@
     </div>
     
     <div class="row">
-        <div class="col-lg-8">
-            <h2 class="mt-3 center">Under Construction</h2>
-            <p>Codestack:</p>
+        <div class="col-1"></div>
+        <div class="col-md-6">
+            <h2 class="mt-3 center">How Did I Learn To Code?</h2>
+            <h3>CodeStack Academy</h3>
+            <p>
+                As a Codestack Student, I learned how to read, write, and love code. I was challenged day in and day out and I persevered through the long nights and exciting group projects. Due to the Pandemic, Codestack was moved fully online and because of that, communication has become such an important part of the process. I cannot envision my life without coding anymore. It has been such an important and amazing part of my life.
+            </p>
+            <p>
+                I've been fortunate enough to work on projects in different languages, libraries and frameworks. At the moment, I've been really into Angular, so I decided to put my portfolio together in Angular! I enjoy using HTML5, CSS3, and JavaScript, but I find it so enjoyable to learn new things and have that "Aha!" moment in those new things! I love learning new things and meeting new people!
+            </p>
+            <a href="../../../assets/pdf/ChristyEangResume2021.pdf" target="_blank" class="btn btn-outline-light mb-3">Christy's Resume</a>
 
         </div>
-        <div class="col-lg-4 mr-0 d-flex justify-content-end p-0">
+        <div class="col-12 col-md-5 mr-0 d-flex justify-content-end align-items-end p-0">
             <img src="../../../assets/images/MyPic.png" height="400px" alt="Picture of Christy">
         </div>
     </div>
