--- a/src/app/pages/projects/projects.component.css
+++ b/src/app/pages/projects/projects.component.css
@@ -5,5 +5,11 @@
 }
 .projBox:hover{
     background-color: #0d1117;
-    border: rgb(0, 15, 97) 1px solid;
+    border: #616161 1px solid;
 }
+/* .projKeywords{
+    color: rgb(0, 255, 255);
+    position: absolute;
+    bottom: 20px;
+    font-size: 12px;
+} */
