--- a/src/app/pages/projects/projects.component.html
+++ b/src/app/pages/projects/projects.component.html
@@ -3,7 +3,7 @@
 <div class="container">
     <div class="row">
         <div class="col-12 col-md-6 col-lg-4 stretch" *ngFor="let proj of projects">
-            <div class="projBox p-3 my-3 rounded">
+            <div class="hover projBox p-3 my-3 rounded">
                 <a class="text-decoration-none text-light" target="_blank" href="{{proj.src}}">
                 <img src={{proj.picture}} class="img-fluid" alt="Christy's Project {{proj.name}}">
                 
