--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -1,19 +1,19 @@
 <!-- The Normal Nav on big screen -->
 <div class="d-none d-lg-block">
-    <ul class="nav fixed-top center justify-content-between bg">
-        <li class="nav-item fixedSize text-center">
+    <ul class="nav fixed-top center bg">
+        <li class="nav-item text-center">
             <a class="nav-link" #home routerLink='/home'>Home</a>
         </li>
-        <li class="nav-item fixedSize text-center">
+        <li class="nav-item text-center">
             <a class="nav-link" #nav routerLink='/about'>About</a>
         </li>
-        <li class="nav-item text-center">
+        <li class="nav-item text-center mx-4">
             <a class="nav-link no">Christy's Portfolio</a>
         </li>
-        <li class="nav-item fixedSize text-center">
+        <li class="nav-item text-center">
             <a class="nav-link" #projects routerLink='/projects'>Projects</a>
         </li>
-        <li class="nav-item fixedSize text-center">
+        <li class="nav-item text-center">
             <a class="nav-link" #contact routerLink='/contact'>Contact</a>
         </li>
     </ul>
