--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid mt-5">
+<div class="container mt-5">
 <!-- Top h1 -->
     <div class="row">
         <div class="col-12">
@@ -9,10 +9,9 @@
     </div>
     
     <div class="row">
-        <div class="col-1"></div>
-        <div class="col-md-6">
-            <h2 class="mt-3 center">How Did I Learn To Code?</h2>
-            <h3>CodeStack Academy</h3>
+        <div class="col-12 col-md-6 col-lg-7">
+            <h2 class="mt-3">My Time To Code.</h2>
+            <p class="mb-1"><b>CodeStack Academy</b></p>
             <p>
                 As a Codestack Student, I learned how to read, write, and love code. I was challenged day in and day out and I persevered through the long nights and exciting group projects. Due to the Pandemic, Codestack was moved fully online and because of that, communication has become such an important part of the process. I cannot envision my life without coding anymore. It has been such an important and amazing part of my life.
             </p>
@@ -22,13 +21,12 @@
             <a href="../../../assets/pdf/ChristyEangResume2021.pdf" target="_blank" class="btn btn-outline-light mb-3">Christy's Resume</a>
 
         </div>
-        <div class="col-12 col-md-5 mr-0 d-flex justify-content-end align-items-end p-0">
+        <div class="col-12 col-md-6 col-lg-5 mr-0 d-flex justify-content-end align-items-end">
             <img src="../../../assets/images/MyPic.png" height="400px" alt="Picture of Christy">
         </div>
     </div>
-    
     <!-- Information About My Experience -->
-    <div class="border-top mb-4"></div>
+    <div class="border-top mx-0 mb-4"></div>
     <div class="row">
         <div class="col-sm-6 col-lg-4">
             <h3 class="center mb-5"><u>Experienced Skills:</u></h3>
