--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -16,7 +16,7 @@
                 </div>
             </div>
             <div class="col-12 col-md-6 col-lg-5 order-1 order-md-2 center">
-                <img src="../../../assets/images/christypic.png" alt="A picture of Christy in a grey polo.">
+                <img src="../../../assets/images/christypic.png" class="myFace" alt="A picture of Christy in a grey polo.">
             </div>
         </div>
     </div>
