--- a/src/app/pages/projects/projects.component.css
+++ b/src/app/pages/projects/projects.component.css
@@ -13,3 +13,15 @@
     bottom: 20px;
     font-size: 12px;
 } */
+.hover{
+    border-radius: 10px;
+    color: white;
+    box-shadow: 0px 5px 12px #2e2e2e;
+    transition-duration: .5s;
+}
+.hover:hover{
+    text-decoration: none;
+    color: #d1f5ff;
+    transform:scale(1.07,1.07);
+    transition-duration: .4s;
+}
