--- a/src/app/pages/projects/projects.component.html
+++ b/src/app/pages/projects/projects.component.html
@@ -1,7 +1,7 @@
 <h1 class="center mt-5">Christy's Projects</h1>
 
 <div class="container">
-    <div class="row">
+    <div class="row mb-4">
         <div class="col-12 col-md-6 col-lg-4 stretch" *ngFor="let proj of projects">
             <div class="hover projBox p-3 my-3 rounded">
                 <a class="text-decoration-none text-light" target="_blank" href="{{proj.src}}">
