--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -29,7 +29,7 @@
     <div class="border-top mx-0 mb-4"></div>
     <div class="row">
         <div class="col-sm-6 col-lg-4">
-            <h3 class="center mb-5"><u>Experienced Skills:</u></h3>
+            <h3 class="center text-center mb-5"><u>Experienced Skills:</u></h3>
             <div class="col-12 ar mb-5">
                     <i class="devicon-angularjs-plain colored x" placement="top" ngbTooltip="Angular"></i>
                 <i class="devicon-ionic-original colored x" placement="top" ngbTooltip="Ionic with Angular"></i>
@@ -50,7 +50,7 @@
         <div class="col-lg-4 d-none d-lg-block"></div>
         
         <div class="col-sm-6 col-lg-4">
-            <h3 class="center mb-5"><u>Development Tools:</u></h3>
+            <h3 class="center text-center mb-5"><u>Development Tools:</u></h3>
             <div class="col-12 ar mb-5">
                 <i class="fab fa-unity fa-3x" placement="top" ngbTooltip="Unity"></i>
                 <img src="../../../assets/images/filezillalogo.png" alt="filezilla logo" placement="top" ngbTooltip="FileZilla">
@@ -72,3 +72,4 @@
         </div>
     </div>
 </div>
+<app-footer></app-footer>
