--- a/src/app/pages/contact/contact.component.css
+++ b/src/app/pages/contact/contact.component.css
@@ -1,6 +1,97 @@
 .black{
     color: black;
 }
+/* Form Stuff */
+.hidden {
+	display: none
+}
+.visible {
+	display: block
+}
+.center-text {
+	text-align: center
+}
+
+  input:focus ~ .floating-label,
+input:not(:focus):valid ~ .floating-label{
+  top: -20px;
+  bottom: 10px;
+  left: 20px;
+  font-size: 12px;
+  opacity: 1;
+}
+textarea:focus ~ .floating-label,
+textarea:not(:focus):valid ~ .floating-label{
+    top: -20px;
+    bottom: 10px;
+    left: 20px;
+    font-size: 12px;
+    opacity: 1;
+}
+
+.inputText {
+  font-size: 14px;
+  width: 200px;
+  height: 35px;
+}
+
+.floating-label {
+  position: absolute;
+  pointer-events: none;
+  left: 20px;
+  top: 15px;
+  transition: 0.2s ease all;
+}
+.textarea .floating-label{
+    position: absolute;
+    pointer-events: none;
+    top: 40px;
+    left: 20px;
+}
+
+input{
+	margin-bottom: 5px;
+    /* height: 50px; */
+    background-color: #ffffff0e;
+    color: white;
+}
+input:focus{
+    background-color: #ffffffe7;
+}
+textarea{
+    background-color: #ffffff0e;
+    color: white;
+
+}
+textarea:focus{
+    background-color: #ffffffe7;
+}
+::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+    color: #ffffff;
+    opacity: 1; /* Firefox */
+  }
+  
+  :-ms-input-placeholder { /* Internet Explorer 10-11 */
+    color: white;
+  }
+  
+  ::-ms-input-placeholder { /* Microsoft Edge */
+    color: white;
+  }
+
+
+.end{
+    display: flex;
+    justify-content:flex-end;
+}
+
+
+
+/* Form Stuff End */
+
+
+
+
 a{
     border-radius: 10px;
     color: white;
