--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -58,7 +58,8 @@
             </div>
             
             <div class="col-12 ar mb-5">
-                <i class="devicon-visualstudio-plain colored x" placement="top" ngbTooltip="Visual Studio Code"></i>
+                <!-- <i class="devicon-visualstudio-plain colored x" placement="top" ngbTooltip="Visual Studio Code"></i> -->
+                <img src="../../../assets/images/vsCode.png" alt="Visual Studio Code icon" placement="top" ngbTooltip="Visual Studio Code">
                 <i class="devicon-bootstrap-plain colored x" placement="top" ngbTooltip="Bootstrap"></i>
                 <i class="devicon-xd-plain colored x" placement="top" ngbTooltip="Adobe XD"></i>
             </div>
