--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,7 +1,7 @@
-<app-hero-img></app-hero-img>
+<!-- <app-hero-img></app-hero-img> -->
 <div class="container-fluid bg">
     <div class="row">
-        <div class="col-12 text-center">
+        <div class="col-12 mt-5 text-center">
             <app-home-text></app-home-text>
         </div>
     </div>
@@ -16,9 +16,93 @@
                 </div>
             </div>
             <div class="col-12 col-md-6 col-lg-5 order-1 order-md-2 center">
-                <img src="../../../assets/images/christypic.png" class="myFace" alt="A picture of Christy in a grey polo.">
+                <img src="../../../assets/images/christypic.png" class="myFace"
+                    alt="A picture of Christy in a grey polo.">
+            </div>
+
+        </div>
+
+
+        <div class="row border-bottom border-top mb-4">
+            <!-- <div class="col-12 border-top"></div> -->
+            <!-- <div class="col-12 col-md-6 col-lg-5 mr-0"> -->
+            <!-- <img src="../../../assets/images/MyPic.png" height="400px" alt="Picture of Christy"> -->
+            <!-- </div> -->
+            <div class="col-12 col-lg-5"></div>
+            <div class="col-12 col-lg-7 my-4">
+                <h2>My Time To Code.</h2>
+                <p class="mb-1"><b>CodeStack Academy</b></p>
+                <p>
+                    As a Codestack Student, I learned how to read, write, and love code. I was challenged day in and day
+                    out
+                    and I persevered through the long nights and exciting group projects. Due to the Pandemic, Codestack
+                    was
+                    moved fully online and because of that, communication has become such an important part of the
+                    process.
+                    I cannot envision my life without coding anymore. It has been such an important and amazing part of
+                    my
+                    life.
+                </p>
+                <p>
+                    I've been fortunate enough to work on projects in different languages, libraries and frameworks. At
+                    the
+                    moment, I've been really into Angular, so I decided to put my portfolio together in Angular! I enjoy
+                    using HTML5, CSS3, and JavaScript, but I find it so enjoyable to learn new things and have that
+                    "Aha!"
+                    moment in those new things! I love learning new things and meeting new people!
+                </p>
             </div>
         </div>
+
+        <div class="row center">
+            <div class="col-12 col-md-6 col-lg-4">
+                <h3 class="center text-center mb-5"><u>Experienced Skills:</u></h3>
+                <div class="col-12 ar mb-5">
+                        <i class="devicon-angularjs-plain colored x" placement="top" ngbTooltip="Angular"></i>
+                    <i class="devicon-ionic-original colored x" placement="top" ngbTooltip="Ionic with Angular"></i>
+                    <i class="devicon-react-original colored x" placement="top" ngbTooltip="React JS"></i>
+                </div>
+                <div class="col-12 ar mb-5">
+                    <i class="devicon-typescript-plain colored x" placement="top" ngbTooltip="Typescript"></i>
+                    <img src="../../../assets/images/sqllogowhitesmol.png" class="bgwhite" alt="sql logo" placement="top" ngbTooltip="SQL">
+                    <i class="devicon-javascript-plain colored x" placement="top" ngbTooltip="Javascript"></i>
+                </div>
+                <div class="col-12 ar mb-5">
+                    <i class="devicon-html5-plain colored x" placement="top" ngbTooltip="HTML"></i>
+                    <i class="devicon-csharp-plain colored x" placement="top" ngbTooltip="C#"></i>
+                    <i class="devicon-css3-plain colored x" placement="top" ngbTooltip="CSS"></i>
+                </div>
+            </div>
+    
+            <!-- <div class="col-lg-4 d-none d-lg-block"></div> -->
+            
+            <div class="col-12 col-md-6 col-lg-4">
+                <h3 class="center text-center mb-5"><u>Development Tools:</u></h3>
+                <div class="col-12 ar mb-5">
+                    <i class="fab fa-unity fa-3x" placement="top" ngbTooltip="Unity"></i>
+                    <img src="../../../assets/images/filezillalogo.png" alt="filezilla logo" placement="top" ngbTooltip="FileZilla">
+                    <i class="icons fab fa-github-alt fa-3x" placement="top" ngbTooltip="Github"></i>
+                </div>
+                
+                <div class="col-12 ar mb-5">
+                    <!-- <i class="devicon-visualstudio-plain colored x" placement="top" ngbTooltip="Visual Studio Code"></i> -->
+                    <img src="../../../assets/images/vsCode.png" alt="Visual Studio Code icon" placement="top" ngbTooltip="Visual Studio Code">
+                    <i class="devicon-bootstrap-plain colored x" placement="top" ngbTooltip="Bootstrap"></i>
+                    <i class="devicon-xd-plain colored x" placement="top" ngbTooltip="Adobe XD"></i>
+                </div>
+    
+                <div class="col-12 ar mb-5">
+                    <img src="../../../assets/images/jiralogo.png" alt="jira logo" placement="top" ngbTooltip="Jira">
+                    <img src="../../../assets/images/slackicon50.png" alt="slack icon" placement="top" ngbTooltip="Slack">
+                    <img src="../../../assets/images/postmanlogo.png" alt="postman logo" placement="top" ngbTooltip="Postman">
+                </div>
+    
+            </div>
+        </div>
+
+
+
+
     </div>
 </div>
 <app-footer></app-footer>
