--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -67,7 +67,7 @@
                     <span class="floating-label">I'm Interested In...</span>
                 </div>
                 <small class="end">{{message.value?.length || 0}}/500</small>
-                <button [disabled]="isLoading" class="submit btn btn-outline-light" type="submit">Submit</button>
+                <button [disabled]="isLoading" class="submit btn btn-light" type="submit">Submit</button>
                 <input [formControl]="honeypot" class="hidden" type="text" />
                 <div [ngClass]="!submitted ? 'hidden' : 'visible'" class="center-text">
                     <span>{{responseMessage}}</span>
