--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -1,6 +1,6 @@
-.bg{
-    background: linear-gradient(#000000, #0d1117);
-}
+/* .bg{
+    background: linear-gradient(#000000,10%, #0d1117);
+} */
 .fontbig{
     font-size: 50px;
 }
