--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -1,22 +1,28 @@
 <!-- The Normal Nav on big screen -->
 <div class="d-none d-lg-block">
-    <ul class="nav fixed-top center bg">
-        <li class="nav-item text-center">
-            <a class="nav-link" #home routerLink='/home'>Home</a>
-        </li>
-        <li class="nav-item text-center">
-            <a class="nav-link" #nav routerLink='/about'>About</a>
-        </li>
-        <li class="nav-item text-center mx-4">
-            <a class="nav-link no">Christy's Portfolio</a>
-        </li>
-        <li class="nav-item text-center">
-            <a class="nav-link" #projects routerLink='/projects'>Projects</a>
-        </li>
-        <li class="nav-item text-center">
-            <a class="nav-link" #contact routerLink='/contact'>Contact</a>
-        </li>
+  <div class="nav fixed-top bg">
+    <ul class="nav container">
+      <li class="nav-item text-center">
+        <a class="nav-link" #home routerLink='/home'>Christy's Portfolio</a>
+      </li>
+      <div class="m-auto"></div>
+      <!-- <li class="nav-item text-center">
+        <a class="nav-link" #nav routerLink='/about'>About</a>
+      </li> -->
+      <!-- <li class="nav-item text-center mx-4">
+        <a class="nav-link no">Christy's Portfolio</a>
+      </li> -->
+      <li class="nav-item text-center">
+        <a class="nav-link" #projects routerLink='/projects'>Projects</a>
+      </li>
+      <li class="nav-item text-center">
+        <a class="nav-link" #contact routerLink='/contact'>Contact</a>
+      </li>
+      <!-- <li class="nav-item text-center">
+        <a class="nav-link" target="_blank" href="../../../assets/pdf/ChristyEangResume2021.pdf">Resume</a>
+      </li> -->
     </ul>
+  </div>
 </div>
 
 <!-- The Collapse Nav for smol-med -->
