--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -74,7 +74,7 @@
                 </div>
             </div>
     
-            <!-- <div class="col-lg-4 d-none d-lg-block"></div> -->
+            <div class="col-lg-2 d-none d-lg-block"></div>
             
             <div class="col-12 col-md-6 col-lg-4">
                 <h3 class="center text-center mb-5"><u>Development Tools:</u></h3>
