--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -1,4 +1,4 @@
-<div class="container marAdd">
+<div class="container mt-5 pt-lg-5 pb-5 mb-5">
     <div class="row">
         <div class="col-12 mb-5 text-center">
             <h1 class="bigtxt">Have Questions? Comments? Need a Web Developer? <br /> Contact Christy!</h1>
