--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -17,6 +17,15 @@
 
     }
 } */
+.csa{
+    color: #D1F5FF;
+    /* text-decoration: dashed !important; */
+    text-decoration: underline;
+}
+.csa:hover{
+    color: white;
+    text-decoration: none;
+}
 .x{
     font-size: 3rem;
 }
