--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,18 +1,20 @@
 <!-- <app-hero-img></app-hero-img> -->
-<div class="container-fluid bg">
+<div class="container-fluid pt-lg-5 bg">
     <div class="row">
-        <div class="col-12 mt-5 text-center">
+        <div class="col-12 text-center">
             <app-home-text></app-home-text>
         </div>
     </div>
     <div class="container">
         <div class="row">
             <div class="col-12 col-md-6 col-lg-7 order-2 order-md-1 mt-5">
-                <h3>I am a Codestack Academy student, with a passion for learning. I'm experienced in Angular, Ionic,
+                <h3>I am a Web Developer, with a passion for learning. I'm experienced in Angular, Ionic,
                     ReactJS, C#,
                     JavaScript, Typescript, HTML, and CSS. I'd love to work with you!</h3>
                 <div class='mt-3'>
                     <a routerLink='/contact' class="btn btn-outline-light mb-4">Contact Me!</a>
+                    <a href="../../../assets/pdf/ChristyEangResume2021.pdf" class="btn btn-outline-light ml-2 mb-4">My Resume</a>
+
                 </div>
             </div>
             <div class="col-12 col-md-6 col-lg-5 order-1 order-md-2 center">
@@ -23,15 +25,18 @@
         </div>
 
 
-        <div class="row border-bottom border-top mb-4">
+        <div class="row border-bottom border-top center mb-4">
             <!-- <div class="col-12 border-top"></div> -->
             <!-- <div class="col-12 col-md-6 col-lg-5 mr-0"> -->
             <!-- <img src="../../../assets/images/MyPic.png" height="400px" alt="Picture of Christy"> -->
             <!-- </div> -->
-            <div class="col-12 col-lg-5"></div>
-            <div class="col-12 col-lg-7 my-4">
+            <!-- <div class="col-12 col-md-5"> -->
+            <!-- <img src="../../../assets/images/MyPic.png" height="400px" alt="Picture of Christy"> -->
+            <!-- <img src="../../../assets/images/comp.png" class="center" alt="Picture of a Computer"> -->
+            <!-- </div> -->
+            <div class="col-12 col-lg-10 my-4">
                 <h2>My Time To Code.</h2>
-                <p class="mb-1"><b>CodeStack Academy</b></p>
+                <a href="https://codestackacademy.org/" class="mb-1 csa"><b>CodeStack Academy</b></a>
                 <p>
                     As a Codestack Student, I learned how to read, write, and love code. I was challenged day in and day
                     out
@@ -41,7 +46,7 @@
                     process.
                     I cannot envision my life without coding anymore. It has been such an important and amazing part of
                     my
-                    life.
+                    life. Codestack is a 9 month intensive program, Mon-Fri 9am-4pm
                 </p>
                 <p>
                     I've been fortunate enough to work on projects in different languages, libraries and frameworks. At
