--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -38,9 +38,9 @@
         <li class="nav-item">
           <a class="nav-link text-right active" routerLink='/home'>Home</a>
         </li>
-        <li class="nav-item">
+        <!-- <li class="nav-item">
           <a class="nav-link text-right active" routerLink='/about'>About</a>
-        </li>
+        </li> -->
         <li class="nav-item">
             <a class="nav-link text-right active" routerLink='/projects'>Projects</a>
           </li>
