--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -7,7 +7,7 @@
     </div>
     <div class="container">
         <div class="row">
-            <div class="col-12 col-md-6 col-lg-7 order-2 order-md-1 mt-5">
+            <div class="col-12 col-md-6 col-lg-7 order-2 order-md-1 mt-5 pt-md-5">
                 <h3>I am a Web Developer, with a passion for learning. I'm experienced in Angular, Ionic,
                     ReactJS, C#,
                     JavaScript, Typescript, HTML, and CSS. I'd love to work with you!</h3>
@@ -15,6 +15,30 @@
                     <a routerLink='/contact' class="btn btn-outline-light mb-4">Contact Me!</a>
                     <a href="../../../assets/pdf/ChristyEangResume2021.pdf" class="btn btn-outline-light ml-2 mb-4">My Resume</a>
 
+                </div>
+                <div class="mb-2">
+                    <a aria-label="Christy's Github" target="_blank" href='https://github.com/christycreme95'>
+                        <!-- <i class="icons fab fa-github-alt fa-2x"></i> -->
+                        <i class="icons fab fa-github-alt fa-2x"></i>
+                    </a>
+                    <a aria-label="Christy's LinkedIn" target="_blank" href='https://www.eang.dev/linkedin' class="ml-3">
+                        <i class="icons fab fa-linkedin-in fa-2x"></i>
+                        <!-- <i class="icons fab fa-github-alt fa-2x"></i> -->
+                    </a>
+                    <a aria-label="Christy's Instagram" target="_blank" href='https://www.instagram.com/christycreme95/' class="ml-3">
+                        <i class="icons fab fa-instagram  fa-2x"></i>
+                        <!-- <i class="icons fab fa-github-alt fa-2x"></i> -->
+
+                    </a>
+                    <!-- <a aria-label="Christy's Code Wars" target="_blank" href='https://www.codewars.com/users/ChristyCreme' class="mr-0 ml-3">
+                        <div class="codewars" alt="codewars icon"></div>
+                        <i class="icons fab fa-github-alt fa-2x"></i>
+
+                    </a> -->
+                    <a aria-label="Christy's Facebook" target="_blank" href='https://www.facebook.com/christycreme95' class="ml-3">
+                        <!-- <i class="icons fab fa-github-alt fa-2x"></i> -->
+                        <i class="icons fab fa-facebook fa-2x"></i>
+                    </a>
                 </div>
             </div>
             <div class="col-12 col-md-6 col-lg-5 order-1 order-md-2 center">
@@ -46,7 +70,7 @@
                     process.
                     I cannot envision my life without coding anymore. It has been such an important and amazing part of
                     my
-                    life. Codestack is a 9 month intensive program, Mon-Fri 9am-4pm
+                    life. Codestack is a 9 month intensive program, Mon-Fri 9am-4pm, so I was completely emmersed in code.
                 </p>
                 <p>
                     I've been fortunate enough to work on projects in different languages, libraries and frameworks. At
