--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -4,7 +4,21 @@
 .fontbig{
     font-size: 50px;
 }
+.icons{
+    color:white;
+}
+.icons:hover{
+    color: #D1F5FF;
+}
+.codewars{
+    width: 30px;
+    height: 30px;
+    background-image: url(../../../assets/images/codewarslogo.png);
+}
 
+.codewars:hover{
+    background-image: url(../../../assets/images/codewarsBlue.png);
+}
 
 @media only screen and (max-width: 420px) {
     .myFace{
